--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "nodeDemo",
   "main": "server.js",
   "scripts": {
-    "build": "",
+    "build": "npm run build-styles && webpack --config ./webpack.config.prod.js --mode production",
+    "build-styles": "webpack --config ./webpack.config.styles.js",
     "start": "node src/server/server",
     "dev-client": "webpack-dev-server --config ./webpack.config.dev.js --mode development",
     "dev-server": "nodemon src/server/server",
@@ -66,11 +67,14 @@
     "eslint-plugin-prettier": "^3.1.2",
     "eslint-plugin-react": "^7.19.0",
     "file-loader": "^6.0.0",
+    "glob": "^7.1.6",
+    "mini-css-extract-plugin": "^0.9.0",
     "node-sass": "^4.13.1",
     "nodemon": "^2.0.2",
     "prettier": "^1.19.1",
     "sass-loader": "^8.0.2",
     "style-loader": "^1.1.3",
+    "uglifyjs-webpack-plugin": "^2.2.0",
     "webpack": "^4.42.0",
     "webpack-cli": "^3.3.11",
     "webpack-dev-server": "^3.10.3"
