--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "build": "npm run build-styles && webpack --config ./webpack.config.prod.js --mode production",
     "build-styles": "webpack --config ./webpack.config.styles.js",
-    "start": "node src/server/server",
+    "start": "node src/server/server.js",
     "dev-client": "webpack-dev-server --config ./webpack.config.dev.js --mode development",
     "dev-server": "nodemon src/server/server",
     "dev": "concurrently \"npm run dev-server\" \"npm run dev-client\""
@@ -31,6 +31,7 @@
     "axios": "^0.19.2",
     "bcryptjs": "^2.4.3",
     "classnames": "^2.2.6",
+    "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "express-validator": "^6.4.0",
     "gravatar": "^1.8.0",
@@ -56,7 +57,6 @@
     "clean-webpack-plugin": "^3.0.0",
     "concurrently": "^5.1.0",
     "css-loader": "^3.4.2",
-    "dotenv": "^8.2.0",
     "eslint": "^6.8.0",
     "eslint-config-airbnb": "^18.1.0",
     "eslint-config-airbnb-base": "^14.1.0",
